# pezkuwi-subxt

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  clippy.toml
.github/issue_templates/: nightly_run_failed.md
cli/: Cargo.toml  README.md  build.rs
cli/src/: main.rs  utils.rs
cli/src/commands/: codegen.rs  compatibility.rs  diff.rs  metadata.rs  version.rs
cli/src/commands/chain_spec/: fetch.rs  mod.rs
cli/src/commands/explore/: mod.rs
cli/src/commands/explore/pallets/: calls.rs  constants.rs  events.rs  mod.rs  storage.rs
cli/src/commands/explore/runtime_apis/: mod.rs
codegen/: Cargo.toml
codegen/src/: error.rs  ir.rs  lib.rs
codegen/src/api/: calls.rs  constants.rs  custom_values.rs  errors.rs  events.rs  mod.rs  pallet_view_functions.rs  runtime_apis.rs  storage.rs
core/: Cargo.toml
core/src/: client.rs  error.rs  events.rs  lib.rs
core/src/blocks/: extrinsic_transaction_extensions.rs  extrinsics.rs  mod.rs  static_extrinsic.rs
core/src/config/: bizinikiwi.rs  default_extrinsic_params.rs  extrinsic_params.rs  mod.rs  pezkuwi.rs  polkadot.rs  substrate.rs  transaction_extensions.rs
core/src/constants/: address.rs  mod.rs
core/src/custom_values/: address.rs  mod.rs
core/src/runtime_api/: mod.rs  payload.rs
core/src/storage/: address.rs  mod.rs  prefix_of.rs  storage_entry.rs  storage_key.rs  storage_key_value.rs  storage_value.rs
core/src/tx/: mod.rs  payload.rs  signer.rs
core/src/utils/: account_id.rs  account_id20.rs  bits.rs  era.rs  mod.rs  multi_address.rs  multi_signature.rs  static_type.rs  unchecked_extrinsic.rs  wrapper_opaque.rs  yesnomaybe.rs
core/src/view_functions/: mod.rs  payload.rs
examples/ffi-example/: README.md
examples/ffi-example/src/: lib.rs
examples/parachain-example/: Cargo.toml  README.md  asset-hub-zombienet.toml
examples/parachain-example/src/: main.rs
examples/wasm-example/: Cargo.toml  README.md
examples/wasm-example/src/: services.rs
examples/wasm-example/src/routes/: fetching.rs  signing.rs
historic/: Cargo.toml  README.md
historic/examples/: extrinsics.rs  storage.rs
historic/src/: config.rs  error.rs  lib.rs  storage.rs
historic/src/client/: online_client.rs
historic/src/config/: bizinikiwi.rs  pezkuwi.rs  polkadot.rs  substrate.rs
lightclient/: Cargo.toml
lightclient/src/: background.rs  chain_config.rs  lib.rs  rpc.rs  shared_client.rs
lightclient/src/platform/: mod.rs  wasm_helpers.rs  wasm_platform.rs  wasm_socket.rs
macro/: Cargo.toml
macro/src/: lib.rs  wasm_loader.rs
metadata/: Cargo.toml
metadata/benches/: bench.rs
metadata/src/: lib.rs
metadata/src/from/: mod.rs  v14.rs  v15.rs  v16.rs
metadata/src/from/legacy/: mod.rs  portable_registry_builder.rs  tests.rs
metadata/src/utils/: ordered_map.rs  validation.rs  variant_index.rs
rpcs/: Cargo.toml  README.md
rpcs/src/: lib.rs  macros.rs  utils.rs
rpcs/src/client/: lightclient_impl.rs  mock_rpc_client.rs  mod.rs  round_robin_rpc_client.rs  rpc_client.rs  rpc_client_t.rs
rpcs/src/methods/: chain_head.rs  legacy.rs  mod.rs
scripts/artifacts/: Cargo.toml
scripts/artifacts/src/: main.rs
signer/: Cargo.toml
signer/src/: ecdsa.rs  eth.rs  lib.rs  pezkuwi_js_compat.rs  polkadot_js_compat.rs  sr25519.rs
signer/src/crypto/: derive_junction.rs  secret_uri.rs  seed_from_entropy.rs
signer/tests/no-std/: Cargo.toml
signer/tests/no-std/tests/: no_std.rs
signer/tests/wasm/: Cargo.toml
signer/tests/wasm/tests/: wasm.rs
subxt/: Cargo.toml
subxt/examples/: bizinikiwi_compat_signer.rs  block_decoding_dynamic.rs  block_decoding_static.rs  blocks_subscribing.rs  constants_dynamic.rs  constants_static.rs  events.rs  light_client_basic.rs  light_client_local_node.rs  rpc_legacy.rs  runtime_apis_dynamic.rs  runtime_apis_raw.rs  runtime_apis_static.rs  setup_client_custom_rpc.rs  setup_client_offline.rs  setup_config_assethub.rs  setup_config_custom.rs  setup_config_transaction_extension.rs  setup_reconnecting_rpc_client.rs  setup_rpc_chainhead_backend.rs  storage_fetch.rs  storage_fetch_dynamic.rs  storage_iterating.rs  storage_iterating_dynamic.rs  substrate_compat_signer.rs  tx_basic.rs  tx_basic_frontier.rs  tx_boxed.rs  tx_partial.rs  tx_status_stream.rs  tx_with_params.rs
subxt/src/: lib.rs  macros.rs
subxt/src/backend/: legacy.rs  mod.rs  utils.rs
subxt/src/blocks/: block_types.rs  blocks_client.rs  extrinsic_types.rs  mod.rs
subxt/src/book/: mod.rs
subxt/src/client/: mod.rs  offline_client.rs  online_client.rs
subxt/src/constants/: constants_client.rs  mod.rs
subxt/src/custom_values/: custom_values_client.rs  mod.rs
subxt/src/error/: dispatch_error.rs  hex.rs  mod.rs
subxt/src/events/: events_client.rs  events_type.rs  mod.rs
subxt/src/runtime_api/: mod.rs  runtime_client.rs  runtime_types.rs
subxt/src/storage/: mod.rs  storage_client.rs  storage_client_at.rs
subxt/src/tx/: mod.rs  tx_client.rs  tx_progress.rs
subxt/src/utils/: fetch_chain_spec.rs  mod.rs
subxt/src/view_functions/: mod.rs  view_function_types.rs  view_functions_client.rs
testing/generate-custom-metadata/: Cargo.toml
testing/generate-custom-metadata/src/: dispatch_error.rs
testing/integration-tests/: Cargo.toml
testing/integration-tests/subxt-test-macro/: Cargo.toml
testing/no-std-tests/: Cargo.toml
testing/substrate-runner/: Cargo.toml  README.md
testing/test-runtime/: Cargo.toml  README.md  build.rs
testing/test-runtime/src/: lib.rs
testing/ui-tests/: Cargo.toml
testing/ui-tests/src/: lib.rs  runtime_apis.rs  storage.rs
testing/ui-tests/src/correct/: custom_values.rs  generic_params.rs  rust_items_preserved.rs  wasm_runtime_metadata.rs
testing/ui-tests/src/incorrect/: need_url_or_path.rs  substitute_at_wrong_path.rs  substitute_path_not_absolute.rs  url_and_path_provided.rs
testing/ui-tests/src/utils/: metadata_test_runner.rs
testing/wasm-lightclient-tests/: Cargo.toml
testing/wasm-rpc-tests/: Cargo.toml
utils/fetch-metadata/: Cargo.toml
utils/fetch-metadata/src/: error.rs  lib.rs
utils/strip-metadata/: Cargo.toml
utils/strip-metadata/src/: lib.rs
(+46 files in other folders)
