[package]
name = "subxt-historic"
version = "0.0.8"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true

license.workspace = true
readme = "README.md"
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Download non head-of-chain blocks and state from Bizinikiwi based nodes"
keywords = ["blockchain", "parity", "bizinikiwi"]

[lints]
workspace = true

[features]
default = ["jsonrpsee", "native"]

# Enable this for native (ie non web/wasm builds).
# Exactly 1 of "web" and "native" is expected.
native = [
	"subxt-rpcs/native",
]

# Enable this for web/wasm builds.
# Exactly 1 of "web" and "native" is expected.
web = [
	"subxt-rpcs/web",
]

# Enable this to use the reconnecting rpc client
reconnecting-rpc-client = ["subxt-rpcs/reconnecting-rpc-client"]

# Enable this to use jsonrpsee, which enables the jsonrpsee RPC client, and
# a couple of util functions which rely on jsonrpsee.
jsonrpsee = [
	"subxt-rpcs/jsonrpsee",
]

[dependencies]
codec = { workspace = true }
frame-decode = { workspace = true, features = ["legacy", "legacy-types"] }
frame-metadata = { workspace = true, features = ["legacy", "std"] }
futures = { workspace = true }
pezkuwi-subxt-rpcs = { workspace = true }
pezsp-crypto-hashing = { workspace = true }
primitive-types = { workspace = true }
scale-decode = { workspace = true }
scale-info = { workspace = true }
scale-info-legacy = { workspace = true }
scale-type-resolver = { workspace = true, features = ["scale-info"] }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
scale-decode = { workspace = true, features = ["derive"] }
scale-value = { workspace = true }
tokio = { workspace = true, features = ["full"] }
