[package]
name = "pezkuwi-subxt-metadata"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
autotests = false

license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Command line utilities for checking metadata compatibility between nodes."

[features]
default = ["legacy", "std"]
std = ["frame-metadata/std", "scale-info/std"]

# Enable decoding of legacy metadata, too.
# std required by frame-metadata to decode <V14.
legacy = [
	"dep:scale-info-legacy",
	"dep:scale-type-resolver",
	"frame-decode/legacy",
	"frame-metadata/legacy",
	"std",
]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
frame-decode = { workspace = true }
frame-metadata = { workspace = true, default-features = false, features = ["current", "decode"] }
hashbrown = { workspace = true }
pezsp-crypto-hashing = { workspace = true }
scale-info = { workspace = true, default-features = false }
scale-info-legacy = { workspace = true, optional = true }
scale-type-resolver = { workspace = true, optional = true }
thiserror = { workspace = true, default-features = false }

[dev-dependencies]
bitvec = { workspace = true, features = ["alloc"] }
criterion = { workspace = true }
frame-decode = { workspace = true, features = ["legacy-types"] }
pezkuwi-subxt-codegen = { workspace = true }
scale-info = { workspace = true, features = ["bit-vec"] }

[lib]
# Without this, libtest cli opts interfere with criterion benches:
bench = false

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
