[workspace]

[package]
name = "wasm-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
hex = "0.4.3"
js-sys = "0.3.69"
serde = "1.0.163"
serde_json = "1.0.96"
subxt = { path = "../../subxt", default-features = false, features = ["jsonrpsee", "web"], target_arch = "wasm32" }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = "0.3.69"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
