[package]
name = "generate-custom-metadata"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = ["bit-vec", "derive", "std"] }
frame-metadata = { workspace = true, features = ["current", "decode"] }
scale-info = { workspace = true, features = ["bit-vec", "std"] }
