[package]
name = "wasm-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-test = "0.3.24"

# This crate is not a part of the workspace, because we want to
# enable the "web" feature here but don't want it enabled as part
# of workspace builds. Also disable the "subxt" feature here because
# we want to ensure it works in isolation of that.
subxt-signer = { path = "../../", default-features = false, features = [
	"ecdsa",
	"sr25519",
	"std",
	"unstable-eth",
	"web",
] }

# this shouldn't be needed, it's in workspace.exclude, but still
# I get the complaint unless I add it...
[workspace]
